--- a/hw-1/movie.css
+++ b/hw-1/movie.css
@@ -22,6 +22,8 @@ h1 {
 }
 
 .quotebubble {
+    display: flex;
+    align-items: center;
     background-color: #ffffff;
     font-size: 13pt;
     font-family: Georgia;
@@ -32,7 +34,19 @@ h1 {
     border-radius: 12px;
 }
 
-span.publication{
-    font-style: italic;
-    padding-left: 2.3em;
+p.text {
+    padding-left: 5px;
 }
+
+p.podaci{
+    display: flex;
+    align-items: center;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+span.publication {
+    padding-left: 5px;
+}
+
+
