--- a/hw-1/movie.css
+++ b/hw-1/movie.css
@@ -13,6 +13,26 @@ h1 {
     text-shadow: 3px 3px #999999
 }
 
+h2 {
+    background-image: url("images/rbg.png");
+    background-repeat: repeat-x;
+    font-size: 48pt;
+    color: red;
+    font-weight: bold;
+    margin-bottom: 1rem;
+}
+
+#paradajz {
+    vertical-align: bottom;
+}
+
+footer {
+    background-color: #a2b964;
+    padding: 0.5em;
+    text-align: center;
+}
+
+
 .kritike{
     display: flex;
     flex-direction: column;
