--- a/hw-1/movie.css
+++ b/hw-1/movie.css
@@ -39,6 +39,9 @@ footer {
     position: relative;
     background-color: #EEEEEE;
     font-size: 13pt;
+    padding-top: 3rem;
+    width: 50%;
+    margin-left: 40px;
 }
 
 .quotebubble {
@@ -63,10 +66,35 @@ p.podaci{
     align-items: center;
     margin-left: 5%;
     margin-right: 5%;
+    margin-top: 15px;
+    margin-bottom: 50px;
 }
 
 span.publication {
     padding-left: 5px;
 }
 
+dl {
+    background-color: #a2b964;
+    padding: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12pt;
+    width: 20%;
+}
+
+dt {
+    padding-top: 15px;
+    font-weight: bold;
+}
+
+dd {
+    padding-top: 3px;
+}
+
+ul.linkovi {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    padding-top: 3px;
+}
 
