--- a/hw-1/movie.css
+++ b/hw-1/movie.css
@@ -1,4 +1,10 @@
+
+* {
+    box-sizing: border-box;
+}
+
 body {
+    justify-content: center;
     background-image: url("images/background.png");
     font-size: 12pt;
     font-family: Arial, Helvetica, sans-serif;
@@ -13,35 +19,53 @@ h1 {
     text-shadow: 3px 3px #999999
 }
 
-h2 {
+h2.header {
+    display: flex;
+    flex-direction: row;
     background-image: url("images/rbg.png");
     background-repeat: repeat-x;
     font-size: 48pt;
     color: red;
     font-weight: bold;
     margin-bottom: 1rem;
+    margin-top: 0;
 }
 
 #paradajz {
     vertical-align: bottom;
 }
 
-footer {
+.footer {
     background-color: #a2b964;
     padding: 0.5em;
     text-align: center;
+    margin-right: 22.5%;
+    margin-left: 22.5%;
+}
+
+.row {
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    padding: 0;
+    box-shadow: 5px 5px 5px grey;
+    margin-right: 22.5%;
+    margin-left: 22.5%;
+}
+
+.column {
+    float: left;   
 }
 
 
-.kritike{
+.column.levo{
     display: flex;
     flex-direction: column;
     position: relative;
     background-color: #EEEEEE;
     font-size: 13pt;
-    padding-top: 3rem;
-    width: 50%;
-    margin-left: 40px;
+    width: 70%;
+   
 }
 
 .quotebubble {
@@ -67,24 +91,42 @@ p.podaci{
     margin-left: 5%;
     margin-right: 5%;
     margin-top: 15px;
-    margin-bottom: 50px;
+    margin-bottom: 40px;
 }
 
 span.publication {
     padding-left: 5px;
 }
 
-dl {
-    background-color: #a2b964;
+.column.desno {
+    position: relative;
+    width: 30%;
+    background-color: #a2b964;    
+}
+
+.row::after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+@media screen and (max-width: 1000px) {
+    .column.levo, .column.desno {
+        width: 100%;
+    }
+}
+
+.lista {
     padding: 15px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 12pt;
-    width: 20%;
+    width: 100%;
 }
 
 dt {
     padding-top: 15px;
     font-weight: bold;
+    
 }
 
 dd {
@@ -98,3 +140,12 @@ ul.linkovi {
     padding-top: 3px;
 }
 
+#poster {
+    position: relative;
+    width: 100%;
+        
+}
+
+#w3c {
+    text-align: right;
+}
